@@ -1,5 +1,6 @@
 Changes for 1.4.2:
 
+ - fixed synchronisation of delete operation between nodes (Alexei)
  - fixed problem with libresolv under Solaris 8 (Alexei)
  - improved SMS sender (Eugene)
  - improved item and trigger filtering (Eugene)
